--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
 
 
 
-add_executable(main main.cpp)
+add_executable(main main.cpp List.cpp)
 
